# filer-crypto

./: Cargo.toml  LICENSE  Package.swift
.github/workflows/: release.yml
Tests/FilerCryptoTests/: FilerCryptoTests.swift
crates/filer-crypto/: Cargo.toml
crates/filer-crypto-uniffi/: Cargo.toml  build.rs
crates/filer-crypto-uniffi/src/: filer_crypto.udl  lib.rs
crates/filer-crypto/src/: blob.rs  error.rs  kdf.rs  lib.rs  metadata.rs  recovery.rs  vault.rs
crates/filer-crypto/tests/: generate_fixtures.rs
docs/: VERSIONING.md
docs/superpowers/plans/: 2026-05-20-filer-crypto-setup.md
docs/superpowers/specs/: 2026-05-20-filer-crypto-setup-design.md  2026-06-08-publish-swift-binding-design.md
scripts/: release-notes.sh
